manifests/delivery-app/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: delivery-app
  labels:
    app.kubernetes.io/part-of: delivery-app
