manifests/delivery-app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: delivery-app
  namespace: delivery-app
spec:
  ingressClassName: nginx
  rules:
    - host: delivery-drkube.huik.site
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: order-service
                port:
                  number: 8000
    - host: delivery.drkube.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: order-service
                port:
                  number: 8000
